fix(ui): week slots starting position too low

--- a/ui/src/css/calendar-weekly.sass
+++ b/ui/src/css/calendar-weekly.sass
@@ -69,7 +69,7 @@
 
     &-events
       position: absolute
-      top: 2.6em
+      top: 1.9em
       bottom: 0
       width: 100%
       overflow: hidden
